--- a/WebStore/Views/Account/Login.cshtml
+++ b/WebStore/Views/Account/Login.cshtml
@@ -2,29 +2,48 @@
 @{
     ViewData["Title"] = "Bejelentkezés";
 }
+<form asp-controller="Account" asp-action="Login">
+    @* Automatikus védelem XSRF támadás ellen *@
 
-<h2>Login</h2>
-
-<div class="row">
-    <div class="col-md-5">
-        <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewBag.ReturnUrl" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-
-            <button class="btn btn-default" type="submit">Bejelentkezés</button>
-        </form>
-    </div>
-</div>
-
+    <table>
+        <tr>
+            <td colspan="2">
+                <div class="failureNotification">@ViewBag.Information</div>
+                <div asp-validation-summary="ModelOnly" class="failureNotification"></div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <div class="contentHead">
+                    Bejelentkezési adatok:
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td width="120">
+                Felhasználónév:
+            </td>
+            <td class="failureNotification">
+                <input asp-for="UserName" />
+                <span asp-validation-for="UserName"></span>
+            </td>
+        </tr>
+        <tr>
+            <td width="120">
+                Jelszó:
+            </td>
+            <td class="failureNotification">
+                <input asp-for="Password" />
+                <span asp-validation-for="Password"></span>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" height="50">
+                <input type="submit" value="Bejelentkezés" class="button" />
+            </td>
+        </tr>
+    </table>
+</form>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
