--- a/WebStore/Views/Account/Register.cshtml
+++ b/WebStore/Views/Account/Register.cshtml
@@ -1,37 +1,105 @@
 ﻿@using WebStore.Models;
-@model RegisterViewModel
 
-@{
-    ViewBag.Title = "Regisztráció";
-}
+@model RegistrationViewModel
+<form asp-controller="Account" asp-action="Register">
+    @* Automatikus védelem XSRF támadás ellen *@
 
-<h2>@ViewBag.Title</h2>
+    <table>
+        <tr>
+            <td colspan="3">
+                <div class="failureNotification">@Html.ValidationSummary(true, "A regisztráció sikertelen!")</div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3">
+                <div class="contentHead">
+                    Személyes adatok:
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td width="120">
+                Név:
+            </td>
+            <td class="failureNotification" colspan="2">
+                <input asp-for="CustomerName" size="40" />
+                <span asp-validation-for="CustomerName"></span>
+            </td>
 
-<div class="row">
-    <div class="col-md-5">
-        <form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewBag.ReturnUrl" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordRepeat"></label>
-                <input asp-for="PasswordRepeat" class="form-control" />
-                <span asp-validation-for="PasswordRepeat" class="text-danger"></span>
-            </div>
+        </tr>
+        <tr>
+            <td width="120">
+                Számlázási cím:
+            </td>
+            <td class="failureNotification" colspan="2">
+                <input asp-for="CustomerAddress" size="40" />
+                <span asp-validation-for="CustomerAddress"></span>
+            </td>
+        </tr>
+        <tr>
+            <td width="120">
+                E-mail cím:
+            </td>
+            <td class="failureNotification" colspan="2">
+                <input asp-for="CustomerEmail" size="40" />
+                <span asp-validation-for="CustomerEmail"></span>
+            </td>
 
-            <button class="btn btn-default" type="submit">Regisztráció</button>
-        </form>
-    </div>
-</div>
+        </tr>
+        <tr>
+            <td width="120">
+                Telefonszám:
+            </td>
+            <td class="failureNotification" colspan="2">
+                <input asp-for="CustomerPhoneNumber" size="40" />
+                <span asp-validation-for="CustomerPhoneNumber"></span>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3">
+                <div class="contentHead">
+                    Bejelentkezési adatok:
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td width="150" colspan="2">
+                Felhasználónév:
+            </td>
+            <td class="failureNotification">
+                <input asp-for="UserName" />
+                <span asp-validation-for="UserName"></span>
+            </td>
+        </tr>
+        <tr>
+            <td width="150" colspan="2">
+                Jelszó:
+            </td>
+            <td class="failureNotification">
+                <input asp-for="Password" />
+                <span asp-validation-for="Password"></span>
+            </td>
+        </tr>
+        <tr>
+            <td width="150" colspan="2">
+                Jelszó megismétlése:
+            </td>
+            <td class="failureNotification">
+                <input asp-for="UserConfirmPassword" />
+                <span asp-validation-for="UserConfirmPassword"></span>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3" height="70">
+                <br />A felhasználónév és a jelszó minimum 5, maximum 40 karakter hosszú lehet. Csak betűt, számot és kötőjelet tartalmathat.<br /><br />
+                <input type="submit" value="Regisztráció" class="button" />
+            </td>
+        </tr>
+    </table>
+</form>
 
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
+@section Scripts
+    {
+    @* jQuery Validation használata a kliens oldali validációra *@
+    @{ Html.RenderPartial("_ValidationScriptsPartial"); }
 }
