--- a/WebStore/Views/Shared/_Layout.cshtml
+++ b/WebStore/Views/Shared/_Layout.cshtml
@@ -1,69 +1,97 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebStore</title>
+    <meta name="viewport" content="width=device-width" />
+    <title>Webshop</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebStore</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Categories</a></li>
-                </ul>
-                @await Html.PartialAsync("LoginPartial")
-            </div>
-        </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - WebStore</p>
-        </footer>
-    </div>
-
-    <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
                 asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                 asp-fallback-test="window.jQuery"
                 crossorigin="anonymous"
                 integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
         </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
+</head>
+<body>
+    <div class="header">
+        <div class="headerText">
+            <h1>
+                Webshop
+            </h1>
+            <h3>
+                Bálint Webshop. Az oldalon jelenleg @ViewBag.UserCount regisztrált felhasználó böngészik.
+            </h3>
+        </div>
+    </div>
+    <div class="headerAdmin">
+        @if (ViewBag.CurrentCustomerName == null)
+        {
+            <table>
+                <tr>
+                    <td>
+                        <a asp-controller="Account" asp-action="Login">Bejelentkezés</a>
+                    </td>
+                    <td>
+                        <a asp-controller="Account" asp-action="Register">Regisztráció</a>
+                    </td>
+                </tr>
+            </table>
+        }
+        else
+        {
+            <table>
+                <tr>
+                    <td colspan="2">
+                        Üdvözöljük, @ViewBag.CurrentCustomerName!
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a asp-controller="Account" asp-action="Logout">Kijelentkezés</a>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr></tr>
+            </table>
+        }
+    </div>
+    <div class="content">
+        <div class="leftColumn">
+            <h3>Keresés kategoriák szerint</h3>
+            @* amennyiben nincsenek megadva kategoriák *@
+            @if (ViewBag.Categories == null || ViewBag.Categories.Length == 0)
+            {
+                <span>Nincs termékünk jelenleg, kérem látogasson vissza később.</span>
+            }
+            else
+            {
+                <ul>
+                    @* felsoroljuk a kategoriákat *@
+                    @foreach (Category category in ViewBag.Categories)
+                    {
+                        <li>
+                            @* létrehozunk egy linket minden kategoriára az Index akcióra az azonosító paraméterrel *@
+                            <a asp-controller="Home" asp-action="Products" asp-route-categoryId="@category.Id">@category.Name</a>
+                        </li>
+                    }
+                </ul>
+            }
+        </div>
+        <div class="rightColumn">
+            @RenderBody()
+            @* betöltjük a tényleges oldal törzsét *@
+            <footer>
+                <p>&copy; 2018 - WebStore</p>
+            </footer>
+        </div>
+    </div>
+    
 
     @RenderSection("Scripts", required: false)
 </body>
