--- a/WebStore/Views/Home/Products.cshtml
+++ b/WebStore/Views/Home/Products.cshtml
@@ -27,7 +27,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <a asp-controller= "ShoppingCart" asp-action="AddToShoppingCart" asp-route-modellNumber="@Model[j].ModellNumber">Kosárba</a>
+                                    <a asp-controller= "ShoppingCart" asp-action="AddToShoppingCart" asp-route-productModellNumber="@Model[j].ModellNumber">Kosárba</a>
                                 </td>
                             </tr>
 
