--- a/WebStore/Views/ShoppingCart/Index.cshtml
+++ b/WebStore/Views/ShoppingCart/Index.cshtml
@@ -3,28 +3,21 @@
 
 <div class="row checkoutForm">
     <h2>Your shopping cart</h2>
-    <h4>Here are the drinks in your shopping cart.</h4>
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>Selected amount</th>
-                <th>Drink</th>
-                <th class="text-right">Price</th>
-                <th class="text-right">Subtotal</th>
+                <th>ItemId</th>
+                <th class="text-right">Quantity</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var line in Model.ShoppingCart.ShoppingCartItems)
+            @foreach (var line in Model.ShoppingCartItems)
             {
                 <tr>
-                    <td class="text-center">@line.Quantity</td>
-                    <td class="text-left">@line.Product.Description</td>
-                    <td class="text-right">@line.Product.Price.ToString("c")</td>
-                    <td class="text-right">
-                        @((line.Quantity * line.Product.Price).ToString("c"))
-                    </td>
-                    <td class="text-center"><a class="glyphicon glyphicon-remove text-danger remove" asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-productModellNumber="@line.Product.ModellNumber"></a></td>
+                    <td class="text-center">@line.ProductModellNumber</td>
+                    <td class="text-left">@line.Quantity</td>
+                    <td class="text-center"><a asp-controller="ShoppingCart" asp-action="RemoveFromShoppingCart" asp-route-productModellNumber="@line.ProductModellNumber">Kivesz</a></td>
                 </tr>
             }
         </tbody>
